[package]
name = "stamp-env"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for deploying preset-based folder/file structures via symlinks"
license = "MIT"
repository = "https://github.com/studio0188/stamp-env"
homepage = "https://github.com/studio0188/stamp-env"

[[bin]]
name = "stampenv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.7"
walkdir = "2"
dirs = "5"
glob = "0.3"
chrono = "0.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
